<resources>
    <string name="app_name">Rock Paper Scissor</string>
    <string name="main_menu_text">Main Menu</string>
    <string name="exit_text">Exit</string>
    <string name="options_text">Options</string>
    <string name="credits_text">Credits</string>
    <string name="start_game_text">Start Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comp_name">System</string>
    <string name="result_text">Start Now</string>
    <string name="player_score_text">0</string>
    <string name="player_name">Player</string>
    <string name="comp_score_text">0</string>
    <string name="title_activity_life_fragment">LifeFragmentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>